[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
utoipa = "5.3.1"
serde = "1.0.217"
service = { path = "../service" }
repository = { path = "../repository" }
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.2"
hyper-util = "0.1.10"
mockall = "0.13.1"
serde_json = "1.0.138"
tower = "0.5.2"
