[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [ "postgres", "runtime-tokio", "tls-native-tls", "sqlite" ] }
mockall = "0.13.1"
async-trait = "0.1.86"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
once_cell = "1.20.2"
lazy_static = "1.5.0"
ctor = "0.2.9"
async_once = "0.2.6"
