[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [ "postgres", "runtime-tokio", "chrono" ] }
mockall = "0.13.1"
async-trait = "0.1.86"
shared = { path = "../shared" }
chrono = "0.4.39"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
